TACID parsing is almost ready to be constructed. Still building the framework

--- a/geographic/Makefile
+++ b/geographic/Makefile
@@ -227,7 +227,7 @@ clean:
 	rm unit_test
 
 check:
-	g++ -o build/unit_test $(UTEST_SOURCES) $(GDAL) $(OPENCV) $(TEST) -I$(PREFIX)/include -L$(PREFIX)/lib -lgeoimage $(OFLAGS)
+	g++ -o build/unit_test $(UTEST_SOURCES) $(GDAL) $(OPENCV) $(TEST) -I$(PREFIX)/include -I$(PREFIX)/include/geoimage -L$(PREFIX)/lib -lgeoimage $(OFLAGS)
 	./build/unit_test
 
 install:
