overwriting results currently works

--- a/geographic/docs/examples/Makefile
+++ b/geographic/docs/examples/Makefile
@@ -1,10 +1,12 @@
 all: hello_geoworld dted_example
 
+GDAL = -I/usr/include/gdal -lgdal
+
 hello_geoworld: hello_geoworld.cpp
-	g++ hello_geoworld.cpp -o hello_geoworld `pkg-config opencv --cflags --libs` -I/opt/local/include -L/opt/local/lib -lgdal -lgeoimage_DEBUG -g
+	g++ hello_geoworld.cpp -o hello_geoworld `pkg-config opencv --cflags --libs` $(GDAL) -I/opt/local/include -lgeoimage 
 
 dted_example:   dted_example.cpp
-	g++ dted_example.cpp -o dted_example `pkg-config opencv --cflags --libs` -I/opt/local/include -L/opt/local/lib -lgdal  -lgeoimage_DEBUG -g
+	g++ dted_example.cpp   -o dted_example   `pkg-config opencv --cflags --libs` $(GDAL) -I/opt/local/include -lgeoimage
 
 	
 clean:
