fixed some demo bugs and started working on documentation

--- a/geographic/docs/examples/Makefile
+++ b/geographic/docs/examples/Makefile
@@ -1,4 +1,4 @@
-all: hello_geoworld dted_example
+all: hello_geoworld dted_example simple_writer
 
 GDAL = -I/usr/include/gdal -lgdal
 
@@ -8,6 +8,8 @@ hello_geoworld: hello_geoworld.cpp
 dted_example:   dted_example.cpp
 	g++ dted_example.cpp   -o dted_example   `pkg-config opencv --cflags --libs` $(GDAL) -I/opt/local/include -lgeoimage
 
+simple_writer:  simple_writer.cpp
+	g++ simple_writer.cpp -o simple_writer  `pkg-config opencv --cflags --libs` $(GDAL) -I/opt/local/include -lgeoimage
 	
 clean:
 	rm -rf hello_geoworld dted_example *.dSYM
