--- a/geographic/docs/examples/Makefile
+++ b/geographic/docs/examples/Makefile
@@ -1,15 +1,17 @@
 all: hello_geoworld dted_example simple_writer
 
 GDAL = -I/usr/include/gdal -lgdal
+GEOIMAGE = -I/opt/local/lib -L/opt/local/lib -lgeoimage
+OPENCV   = `pkg-config opencv --cflags --libs`
 
 hello_geoworld: hello_geoworld.cpp
-	g++ hello_geoworld.cpp -o hello_geoworld `pkg-config opencv --cflags --libs` $(GDAL) -I/opt/local/include -lgeoimage 
+	g++ hello_geoworld.cpp -o hello_geoworld $(OPENCV) $(GDAL) $(GEOIMAGE)
 
 dted_example:   dted_example.cpp
-	g++ dted_example.cpp   -o dted_example   `pkg-config opencv --cflags --libs` $(GDAL) -I/opt/local/include -lgeoimage
+	g++ dted_example.cpp   -o dted_example   $(OPENCV) $(GDAL) $(GEOIMAGE)
 
 simple_writer:  simple_writer.cpp
-	g++ simple_writer.cpp -o simple_writer  `pkg-config opencv --cflags --libs` $(GDAL) -I/opt/local/include -lgeoimage
+	g++ simple_writer.cpp -o simple_writer   $(OPENCV) $(GDAL) $(GEOIMAGE)
 	
 clean:
-	rm -rf hello_geoworld dted_example *.dSYM
+	rm -rf hello_geoworld dted_example simple_writer *.dSYM
